--- a/Project-PreviewCard/StatsPreviewCard/style.css
+++ b/Project-PreviewCard/StatsPreviewCard/style.css
@@ -12,26 +12,27 @@ body{
     background-color: var(--main-color);
     font-family: 'Inter', sans-serif;
     font-size: large;
+    letter-spacing: 1px;
 }
 h1{
     color: white;
+    font-size: 42px;
 }
 h2{
     color: var(--h2-color);
+    margin-bottom: 0;
+    font-size: 28px;
 }
 p{
     color: var(--p-color);
+    line-height: 32px;
 }
 img{
     height: 100%;
     border-radius: var(--img);
-    opacity: 0.7;
+    opacity: 0.6;
 }
-.image{
-    height: 500px;
-    background-color: var(--span-color);
-    border-radius: var(--img);
-}
+
 
 .container{
     display: flex;
@@ -43,7 +44,7 @@ img{
 .card{
     width: 600px;
     height: 500px;
-    padding: 0 70px;
+    padding: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,9 +53,10 @@ img{
     flex-direction: column;
 }
 .stats{
-    width: 500px;
+    width: 450px;
 }
 .values{
+    margin-top: 70px;
     display: flex;
     width: 100%;
     flex-direction: row;
@@ -62,6 +64,14 @@ img{
 }
 .font{
     font-family: 'Lexend Deca', sans-serif;
+    letter-spacing: 2px;
+    margin-top: 5px;
+    font-size: 14px;
+}
+.image{
+    height: 530px;
+    background-color: var(--span-color);
+    border-radius: var(--img);
 }
 .attribution{
     position: fixed;
@@ -72,3 +82,47 @@ img{
 .attribution a{ 
     color: hsl(228, 45%, 44%); 
 }
+
+@media screen and (max-width: 1250px){
+    html, 
+    body{
+        text-align: center;
+        font-size: 15px;
+    }
+    h1{
+        font-size: 30px;
+        margin-top: 35px;
+    }
+    p{
+        line-height: 28px;
+    }
+    img{
+        content: url(./images/image-header-mobile.jpg);
+        width: 350px;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .container{
+        flex-direction: column-reverse;
+    }
+    .card{
+        width: 350px;
+        height: 100%;
+        padding: 0;
+        border-radius: 0 0 10px 10px;
+    }
+    .stats{
+        width: 300px;
+    }
+    .values{
+        margin: 30px 0;
+        flex-direction: column;
+    }
+    .image{
+        height: 250px;
+        border-radius: 10px 10px 0 0;
+    }
+    .attribution{
+        position: relative;
+    }
+  }
